[project]
name = "ragedetection"
version = "0.1.0"
description = ""
authors = [
    {name = "p3rc1va1",email = "35celik.baha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "deepface (>=0.0.93,<0.0.94)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "tf-keras (>=2.19.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "ragedetection", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
